# my_

./: .gitignore  README.md  pyproject.toml
data_process/: cells_df.py  insitu_df.py  spatial_aggs.py
figures/: double.py  four_by_two.py  save.py  single.py  two_by_two.py
files/: csv.py  handy.py
gridded/: aggregate.py  dimensions.py  extract.py  info.py  spatial.py
math/: mapping.py  stats.py
plot/: basic.py  colors.py  custom.py  init_ax.py  legend.py  limits.py  maps.py  style.py  tables.py
resources/: sources.py  units.py
series/: aggregate.py  convert.py  group.py  time.py
src/blitzcomp/: parallel.py
src/datarie/: templates.py  time.py
src/fastcomp/: parallel.py
src/mcmath/: distributions.py  standardize.py
src/my_/computing/: parallel.py
src/my_/data/: CLM5.py  COSMOREA6.py  ERA5.py  ERA5L.py  GLDAS.py  GLEAM.py  HOLIDROUGHT.py  ICOS.py  (+5 more)
src/my_data_process/: apply_nc.py  cells_df.py  insitu_df.py
src/my_figures/: double.py  four_by_two.py  save.py  single.py
src/my_files/: csv.py  handy.py  netcdf.py
src/my_gridded/: dimensions.py  extract.py  spatial.py
src/my_math/: mapping.py  stats.py
src/my_plot/: basic.py  colors.py  custom.py  init_ax.py  legend.py  maps.py  style.py  tables.py
src/my_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/my_resources/: sources.py
src/my_resources.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/my_science/: anomalies.py  cells_df.py  insitu_df.py  parallel.py  test.py
src/my_series/: aggregate.py  group.py  interpolate.py  time.py
src/neoplot/: figures.py  plots.py
(+33 files in other folders)
