[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_py"
version = "0.6.0"
dependencies = [
	"requests",
   	'importlib-metadata; python_version>="3.10"',
]

[tool.setuptools]
packages = ["chrispy", "neoplot", "datarie", "fastcomp"]
package-dir = {"" = "src"}
