[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chrispy"
version = "0.9.0"
dependencies = [
	"requests",
   	'importlib-metadata; python_version=="3.11"',
]

[tool.setuptools]
packages = ["chrispy", "neoplot", "datarie", "fastcomp"]
package-dir = {"" = "src"}
